Jenkins/manifiestos/jenkins-ingress.yaml
# Implementación/Configuración de Jenkins en Kubernetes mediante ArgoCD
# Autor: Francisco Javier Gutierrez | Unix/Linux Architect & Cloud Engineer

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: jenkins.dominio.com.bo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
